Fix alignment of fradrag inputs

--- a/src/pages/saksbehandling/steg/beregning/fradragInputs.module.less
+++ b/src/pages/saksbehandling/steg/beregning/fradragInputs.module.less
@@ -39,12 +39,12 @@
 }
 
 .utlandOgPeriodeContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    div:not(:last-child) {
-        margin-right: @spacing-xxs;
-    }
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
+    grid-auto-flow: column;
+
+    column-gap: @spacing-xxs;
 }
 
 .leggTilNyttFradragContainer {
